--- a/data/index.html
+++ b/data/index.html
@@ -7,7 +7,7 @@
 <body>
   <header>
     <h1>👋 Hey, I'm Cameron</h1>
-    <p>I'm an 12-year-old coding Guy. Python, Godot(Small stuff), HTML(Not Well) — I do it all. 😎</p>
+    <p>I'm an 12-year-old coding Guy. Python, C(like a calculator),Godot(Small stuff), HTML(Not Well) — I do it all. 😎</p>
     <img src="me.jpg" alt="Your face" width="200px">
   </header>
 
